# Report2Earn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  test_dynamic_rewards.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
ai-verify/: .env  .gitignore  Dockerfile  README.md  ai_verification_system.py  api_server.py  content_scraper.py  main.py  nixpacks.toml  requirements.txt  test_client.py  test_image_processing.py  web_search_module.py
algorand-wallet/: README.md  package-lock.json  package.json
apps/ai-verification-module/: README.md  pyproject.toml
apps/ai-verification-module/src/r2e_ai_verification/: __init__.py  api.py  cli.py  image_processor.py  schemas.py  system.py
apps/smart-contracts/: README.md  package-lock.json  package.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnimatedListDemo.tsx  AppleCardsCarouselDemo.tsx  Leaderboard.tsx  NetworkStatus.tsx  (+12 more)
scrapper/: README.md  facebook_scraper.py  instagram_scraper.py  main.py  reddit_api_scraper.py  reddit_scraper.py  reddit_scraper_final.py  reddit_scraper_v2.py  requirements.txt  unified_scraper.py  x_post_1965325339577753615.json  x_post_1965477275711013143.json  x_post_1965597878237139351.json  x_post_1966020121157411140.json  x_post_1ndxrnn.json
smart-contracts/: README.md  account-details.json  approval.teal  clear.teal  deploy-contract.js  deploy-creator.js  package-lock.json  package.json
(+47 files in other folders)
